# ockam

examples/rust/get_started/examples/: 06-credentials-exchange-client.rs  06-credentials-exchange-issuer.rs  06-credentials-exchange-server.rs  11-attribute-based-authentication-control-plane.rs  11-attribute-based-authentication-edge-plane.rs
implementations/elixir/ockam/ockam_services/test/: authorization_test.exs
implementations/rust/ockam/ockam_abac/src/: attribute_access_control.rs
implementations/rust/ockam/ockam_api/src/: bootstrapped_identities_store.rs  lib.rs  util.rs
implementations/rust/ockam/ockam_api/tests/: auth_smoke.rs  authority.rs  credential_issuer.rs
implementations/rust/ockam/ockam_app/: Cargo.toml
implementations/rust/ockam/ockam_app_lib/: Cargo.toml  build.rs
implementations/rust/ockam/ockam_app_lib/src/: background_node.rs  lib.rs
implementations/rust/ockam/ockam_app_lib/src/api/: functions.rs  mock_data.rs  mod.rs  notification.rs  state.rs
implementations/rust/ockam/ockam_app_lib/src/enroll/: enroll_user.rs
implementations/rust/ockam/ockam_app_lib/src/invitations/: commands.rs  state.rs
implementations/rust/ockam/ockam_app_lib/src/projects/: commands.rs  mod.rs
implementations/rust/ockam/ockam_app_lib/src/shared_service/relay/: create.rs
implementations/rust/ockam/ockam_app_lib/src/shared_service/tcp_outlet/: create.rs  delete.rs
implementations/rust/ockam/ockam_app_lib/src/state/: mod.rs
implementations/rust/ockam/ockam_command/src/: authenticated.rs
tools/scripts/release/: release.sh
(+63 files in other folders)
