[package]
name = "ockam_app_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
duct = "0.13.6"
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
tokio = { version = "1.31.0", features = ["full"] }
tokio-retry = "0.3"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
ockam = { path = "../ockam", version = "^0.96.0", features = ["software_vault"] }
ockam_api = { path = "../ockam_api", version = "0.39.0", features = ["std"] }
ockam_core = { path = "../ockam_core", version = "^0.87.0" }
ockam_multiaddr = { path = "../ockam_multiaddr", version = "0.30.0", features = ["cbor", "serde"] }
ockam_transport_tcp = { path = "../ockam_transport_tcp", version = "^0.90.0" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
thiserror = "1.0.47 "
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[build-dependencies]
cbindgen = "0.26"